--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             </div>
         </form>
 
+        <!-- // error display  -->
+        <div id="errorDisplay" class="text-center text-danger"></div>
+
         <!-- // total result found display  -->
 
         <div class="mb-3" id="totalResultFound"></div>
