--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             </div>
         </form>
 
+        <!-- //spinner display loading -->
+        <div id="spinner" class="text-center d-none">
+            <button class="btn btn-light" type="button" disabled>
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+        </div>
+
         <!-- // error display  -->
         <div id="errorDisplay" class="text-center text-danger"></div>
 
