--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="input-group mb-3">
                 <input id="input-field" type="text" class="form-control" placeholder="search your book here ...">
                 <div class="input-group-append">
-                    <button onclick="getBookName()" type="button" class="btn btn-danger">Search</button>
+                    <button id="myBtn" onclick="getBookName()" type="button" class="btn btn-danger">Search</button>
                 </div>
             </div>
         </form>
